src/objects/Merlin_PCS__c.object
<CustomObject>
    <fields>
        <fullName>ANZ_ID__c</fullName>
        <externalId>true</externalId>
        <label>ANZ ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>600</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Signed_Agreement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contact Signed Agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Who is the person at the Facility who has accepted responsibility for this programmer?</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Merlin PCS</relationshipLabel>
        <relationshipName>Merlin_PCS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Facility_Name__c</fullName>
        <formula>Facility__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Facility Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facility_SJM_ID__c</fullName>
        <formula>Facility__r.SJM_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Facility SJM ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facility__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Use this field if this Programmer is kept at a Hospital or Private Practice.</inlineHelpText>
        <label>Facility</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Merlin PCS</relationshipLabel>
        <relationshipName>Merlin_PCS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_software_update__c</fullName>
        <label>Last software update</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MFGPRO_Sub_Location__c</fullName>
        <inlineHelpText>This field shows further description from MFGPRO of the item&apos;s location</inlineHelpText>
        <label>MFGPRO Sub Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MFGPRO_Territory__c</fullName>
        <label>MFGPRO Territory</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <label>Model</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Planned_upgrade_date__c</fullName>
        <inlineHelpText>Use this field to indicate whe  you will upgrade this Merlin</inlineHelpText>
        <label>Planned upgrade date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Practitioner_Signed_Agreement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Practitioner Signed Agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Practitioner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Use this field to denote the practitioner who has accepted responsibility for this Programmer</inlineHelpText>
        <label>Practitioner</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Merlin PCS (Practitioner)</relationshipLabel>
        <relationshipName>Merlin_PCS1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Previous_Facility__c</fullName>
        <label>Previous Facility</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Version__c</fullName>
        <label>Previous Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Assignment__c</fullName>
        <inlineHelpText>This is the SAP assignment  as of 31AUG2016</inlineHelpText>
        <label>SAP Assignment</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Item_Number__c</fullName>
        <label>SAP Item Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SJM_Rep_Signed_agreement__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Use this field to denote who has signed the consignment agreement which is attached to this record</inlineHelpText>
        <label>SJM Rep Signed Agreement?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SJM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SJM Representative</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Merlin_PCS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Serial__c</fullName>
        <externalId>true</externalId>
        <label>Serial #</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Software_Version__c</fullName>
        <label>Software Version</label>
        <picklist>
            <picklistValues>
                <fullName>V 14.2.1</fullName>
                <color>#0B6FCE</color>
            </picklistValues>
            <picklistValues>
                <fullName>V 14.2.2</fullName>
                <color>#78C953</color>
            </picklistValues>
            <picklistValues>
                <fullName>V 17.2.2</fullName>
                <color>#E27001</color>
            </picklistValues>
            <picklistValues>
                <fullName>V 17.2.3</fullName>
                <color>#A845DC</color>
            </picklistValues>
            <picklistValues>
                <fullName>V 18.2 REV 1</fullName>
                <color>#F3D904</color>
            </picklistValues>
            <picklistValues>
                <fullName>V 19.2</fullName>
                <color>#A53711</color>
            </picklistValues>
            <picklistValues>
                <fullName>V 20.0.1.2 REV 1</fullName>
                <color>#66E9BD</color>
            </picklistValues>
            <picklistValues>
                <fullName>V 20.0.2</fullName>
                <color>#0B24BE</color>
            </picklistValues>
            <picklistValues>
                <fullName>V 21.1.2</fullName>
                <color>#419249</color>
            </picklistValues>
            <picklistValues>
                <fullName>V 22.0.2 REV 1</fullName>
                <color>#B6E32E</color>
            </picklistValues>
            <picklistValues>
                <fullName>V 22.0.4</fullName>
                <color>#641CCF</color>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>ACT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NSW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QLD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sub_Location_Description__c</fullName>
        <inlineHelpText>E.g. Cardiac Pacing Clinic</inlineHelpText>
        <label>Sub Location Description</label>
        <type>TextArea</type>
    </fields>
    <label>Merlin PCS</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Software_Version__c</columns>
        <columns>Serial__c</columns>
        <columns>SAP_Item_Number__c</columns>
        <columns>State__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>SAP_Assignment__c</columns>
        <columns>Facility__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Merlin_PCS_NSW</fullName>
        <columns>NAME</columns>
        <columns>Serial__c</columns>
        <columns>SAP_Assignment__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Software_Version__c</columns>
        <columns>Facility__c</columns>
        <columns>Contact__c</columns>
        <columns>MFGPRO_Sub_Location__c</columns>
        <columns>State__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>State__c</field>
            <operation>contains</operation>
            <value>ACT,NSW</value>
        </filters>
        <label>Merlin PCS - NSW</label>
    </listViews>
    <listViews>
        <fullName>Merlin_PCS_NZ</fullName>
        <columns>NAME</columns>
        <columns>Software_Version__c</columns>
        <columns>Serial__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>SAP_Assignment__c</columns>
        <columns>Facility__c</columns>
        <columns>Contact__c</columns>
        <columns>Sub_Location_Description__c</columns>
        <columns>Last_software_update__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>State__c</field>
            <operation>equals</operation>
            <value>NZ</value>
        </filters>
        <label>Merlin PCS - NZ</label>
    </listViews>
    <listViews>
        <fullName>Merlin_PCS_No_State_Assigned</fullName>
        <columns>NAME</columns>
        <columns>Serial__c</columns>
        <columns>SAP_Assignment__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Software_Version__c</columns>
        <columns>Facility__c</columns>
        <columns>Contact__c</columns>
        <columns>MFGPRO_Sub_Location__c</columns>
        <columns>State__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>State__c</field>
            <operation>notContain</operation>
            <value>NZ,ACT,NSW,NT,QLD,SA,TAS,VIC,WA</value>
        </filters>
        <label>Merlin PCS - No State Assigned</label>
    </listViews>
    <listViews>
        <fullName>Merlin_PCS_QLD</fullName>
        <columns>NAME</columns>
        <columns>Serial__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Software_Version__c</columns>
        <columns>Facility__c</columns>
        <columns>Contact__c</columns>
        <columns>SAP_Assignment__c</columns>
        <columns>MFGPRO_Sub_Location__c</columns>
        <columns>State__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>State__c</field>
            <operation>equals</operation>
            <value>QLD</value>
        </filters>
        <label>Merlin PCS - QLD</label>
    </listViews>
    <listViews>
        <fullName>Merlin_PCS_SA</fullName>
        <columns>NAME</columns>
        <columns>Serial__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Facility__c</columns>
        <columns>Contact__c</columns>
        <columns>SAP_Assignment__c</columns>
        <columns>MFGPRO_Sub_Location__c</columns>
        <columns>State__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>State__c</field>
            <operation>equals</operation>
            <value>SA,NT,WA</value>
        </filters>
        <label>Merlin PCS - SAWA</label>
    </listViews>
    <listViews>
        <fullName>Merlin_PCS_VIC</fullName>
        <columns>NAME</columns>
        <columns>Serial__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Software_Version__c</columns>
        <columns>Facility__c</columns>
        <columns>Contact__c</columns>
        <columns>SAP_Assignment__c</columns>
        <columns>MFGPRO_Sub_Location__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>State__c</field>
            <operation>equals</operation>
            <value>VIC,TAS</value>
        </filters>
        <label>Merlin PCS - VIC</label>
    </listViews>
    <listViews>
        <fullName>Merlin_PCS_WA</fullName>
        <columns>NAME</columns>
        <columns>Serial__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Software_Version__c</columns>
        <columns>Facility__c</columns>
        <columns>Contact__c</columns>
        <columns>SAP_Assignment__c</columns>
        <columns>MFGPRO_Sub_Location__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>State__c</field>
            <operation>equals</operation>
            <value>WA</value>
        </filters>
        <label>Merlin PCS - WA</label>
    </listViews>
    <nameField>
        <displayFormat>MPCS-{000000}</displayFormat>
        <label>Merlin PCS Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Merlin PCS</pluralLabel>
    <recordTypes>
        <fullName>Merlin_PCS</fullName>
        <active>true</active>
        <label>Merlin PCS</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>